deploy/m2/server-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: jarvis-server, namespace: jarvis}
spec:
  template:
    spec:
      automountServiceAccountToken: false
      containers:
        - name: server
          image: jarvis-server:0.2.0-rc.1
